// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"High"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\">
        <div class=\\"flex items-center gap-x-1 uppercase bg-ink-200 rounded-full px-1.5 py-1 cursor\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs text-vanilla-400 tracking-wide font-medium\\">

  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
        </div>
        <div class=\\"flex items-center space-x-1.5\\">
          <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
        </div>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"Low"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\">
        <div class=\\"flex items-center gap-x-1 uppercase bg-ink-200 rounded-full px-1.5 py-1 cursor\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs text-vanilla-400 tracking-wide font-medium\\">

  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
        </div>
        <div class=\\"flex items-center space-x-1.5\\">
          <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
        </div>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"Medium"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\">
        <div class=\\"flex items-center gap-x-1 uppercase bg-ink-200 rounded-full px-1.5 py-1 cursor\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs text-vanilla-400 tracking-wide font-medium\\">

  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
        </div>
        <div class=\\"flex items-center space-x-1.5\\">
          <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
        </div>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":false,"priority":"noop"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\">
        <div class=\\"flex items-center gap-x-1 uppercase bg-ink-200 rounded-full px-1.5 py-1 cursor\\">
          <zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-xxs text-vanilla-400 tracking-wide font-medium\\">
    no priority
  </span>
        </div>
        <div class=\\"flex items-center gap-x-1.5\\">
          <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
        </div>
        <div class=\\"flex items-center space-x-1.5\\">
          <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
        </div>
      </div>
    </div>
    <div class=\\"hidden w-full md:block md:w-1/5\\"></div>
  </div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"High"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\"><span class=\\"relative z-menu\\"><div class=\\"leading-none\\"><button class=\\"flex items-center gap-x-1 bg-ink-200 rounded-full cursor-pointer focus:outline-none py-1 pl-1.5 pr-1\\"><!----> <span class=\\"text-vanilla-100 text-xxs font-medium tracking-wide uppercase\\">
          Set priority
        </span>
        <zicon-stub icon=\\"chevron-down\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"transition-all duration-300 transform -ml-0.5 rotate-0\\"></zicon-stub></button></div>
      <transition-stub enterclass=\\"sm:opacity-0 sm:scale-75\\" leaveclass=\\"sm:opacity-100 sm:scale-100\\" entertoclass=\\"sm:opacity-100 sm:scale-100\\" leavetoclass=\\"sm:opacity-0 sm:scale-75\\" enteractiveclass=\\"animate-slide-bottom-enter-active sm:animate-none sm:transition-all sm:duration-75 sm:ease-out-quad\\" leaveactiveclass=\\"animate-slide-bottom-leave-active sm:animate-none sm:transition-all sm:duration-150 sm:ease-in-quad\\">
        <!---->
      </transition-stub></span>
      <div class=\\"flex items-center gap-x-1.5\\">
        <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
      </div>
      <div class=\\"flex items-center space-x-1.5\\">
        <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
      </div>
    </div>
  </div>
  <div class=\\"hidden w-full md:block md:w-1/5\\">
    <div class=\\"flex justify-end mt-1 h-full\\">
      <zbutton-stub color=\\"cherry\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"minus-circle\\" data-testid=\\"unset-issue-priority\\" data-original-title=\\"null\\" class=\\" has-tooltip\\"></zbutton-stub>
    </div>
  </div>
</div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"Low"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\"><span class=\\"relative z-menu\\"><div class=\\"leading-none\\"><button class=\\"flex items-center gap-x-1 bg-ink-200 rounded-full cursor-pointer focus:outline-none py-1 pl-1.5 pr-1\\"><!----> <span class=\\"text-vanilla-100 text-xxs font-medium tracking-wide uppercase\\">
          Set priority
        </span>
        <zicon-stub icon=\\"chevron-down\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"transition-all duration-300 transform -ml-0.5 rotate-0\\"></zicon-stub></button></div>
      <transition-stub enterclass=\\"sm:opacity-0 sm:scale-75\\" leaveclass=\\"sm:opacity-100 sm:scale-100\\" entertoclass=\\"sm:opacity-100 sm:scale-100\\" leavetoclass=\\"sm:opacity-0 sm:scale-75\\" enteractiveclass=\\"animate-slide-bottom-enter-active sm:animate-none sm:transition-all sm:duration-75 sm:ease-out-quad\\" leaveactiveclass=\\"animate-slide-bottom-leave-active sm:animate-none sm:transition-all sm:duration-150 sm:ease-in-quad\\">
        <!---->
      </transition-stub></span>
      <div class=\\"flex items-center gap-x-1.5\\">
        <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
      </div>
      <div class=\\"flex items-center space-x-1.5\\">
        <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
      </div>
    </div>
  </div>
  <div class=\\"hidden w-full md:block md:w-1/5\\">
    <div class=\\"flex justify-end mt-1 h-full\\">
      <zbutton-stub color=\\"cherry\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"minus-circle\\" data-testid=\\"unset-issue-priority\\" data-original-title=\\"null\\" class=\\" has-tooltip\\"></zbutton-stub>
    </div>
  </div>
</div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"Medium"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\"><span class=\\"relative z-menu\\"><div class=\\"leading-none\\"><button class=\\"flex items-center gap-x-1 bg-ink-200 rounded-full cursor-pointer focus:outline-none py-1 pl-1.5 pr-1\\"><!----> <span class=\\"text-vanilla-100 text-xxs font-medium tracking-wide uppercase\\">
          Set priority
        </span>
        <zicon-stub icon=\\"chevron-down\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"transition-all duration-300 transform -ml-0.5 rotate-0\\"></zicon-stub></button></div>
      <transition-stub enterclass=\\"sm:opacity-0 sm:scale-75\\" leaveclass=\\"sm:opacity-100 sm:scale-100\\" entertoclass=\\"sm:opacity-100 sm:scale-100\\" leavetoclass=\\"sm:opacity-0 sm:scale-75\\" enteractiveclass=\\"animate-slide-bottom-enter-active sm:animate-none sm:transition-all sm:duration-75 sm:ease-out-quad\\" leaveactiveclass=\\"animate-slide-bottom-leave-active sm:animate-none sm:transition-all sm:duration-150 sm:ease-in-quad\\">
        <!---->
      </transition-stub></span>
      <div class=\\"flex items-center gap-x-1.5\\">
        <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
      </div>
      <div class=\\"flex items-center space-x-1.5\\">
        <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
      </div>
    </div>
  </div>
  <div class=\\"hidden w-full md:block md:w-1/5\\">
    <div class=\\"flex justify-end mt-1 h-full\\">
      <zbutton-stub color=\\"cherry\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"minus-circle\\" data-testid=\\"unset-issue-priority\\" data-original-title=\\"null\\" class=\\" has-tooltip\\"></zbutton-stub>
    </div>
  </div>
</div>
</div>"
`;

exports[`renders IssuePriorityCard with all prop options: {"title":"Assert statement used outside of tests","shortcode":"BAN-B101","issueType":"security","analyzer":{"name":"Python","logo":"analyzer_logos/python.svg","shortcode":"python"},"canChangePriority":true,"priority":"noop"} 1`] = `
"<div to=\\"\\" class=\\"block group\\">
  <!---->
  <div class=\\"flex flex-wrap flex-1 w-full\\">
    <div class=\\"flex flex-col space-y-2 text-sm border-ink-300 text-vanilla-400 justify-evenly w-full md:w-4/5 py-3\\">
      <div class=\\"flex items-center space-x-2 text-base font-semibold sm:text-lg text-vanilla-200\\">
        <p class=\\"text-sm font-semibold text-vanilla-300\\"><span>Assert statement used outside of tests</span> <span class=\\"ml-1 text-xs font-normal text-vanilla-400 whitespace-nowrap\\">BAN-B101
      </span></p>
      </div>
      <div class=\\"flex flex-wrap text-xs gap-x-4\\"><span class=\\"relative z-menu\\"><div class=\\"leading-none\\"><button class=\\"flex items-center gap-x-1 bg-ink-200 rounded-full cursor-pointer focus:outline-none py-1 pl-1.5 pr-1\\"><zicon-stub icon=\\"ellipsis-small\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"-mx-0.5\\"></zicon-stub> <span class=\\"text-vanilla-100 text-xxs font-medium tracking-wide uppercase\\">
          no priority
        </span>
        <zicon-stub icon=\\"chevron-down\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"transition-all duration-300 transform -ml-0.5 rotate-0\\"></zicon-stub></button></div>
      <transition-stub enterclass=\\"sm:opacity-0 sm:scale-75\\" leaveclass=\\"sm:opacity-100 sm:scale-100\\" entertoclass=\\"sm:opacity-100 sm:scale-100\\" leavetoclass=\\"sm:opacity-0 sm:scale-75\\" enteractiveclass=\\"animate-slide-bottom-enter-active sm:animate-none sm:transition-all sm:duration-75 sm:ease-out-quad\\" leaveactiveclass=\\"animate-slide-bottom-leave-active sm:animate-none sm:transition-all sm:duration-150 sm:ease-in-quad\\">
        <!---->
      </transition-stub></span>
      <div class=\\"flex items-center gap-x-1.5\\">
        <analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Python\\" shortcode=\\"python\\" size=\\"small\\" hidetooltip=\\"true\\" logo=\\"analyzer_logos/python.svg\\"></analyzerlogo-stub> <span class=\\"text-sm tracking-wide capitalize text-vanilla-400\\">
          Python
        </span>
      </div>
      <div class=\\"flex items-center space-x-1.5\\">
        <zicon-stub icon=\\"security\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400 tracking-wide\\">Security</span>
      </div>
    </div>
  </div>
  <div class=\\"hidden w-full md:block md:w-1/5\\">
    <div class=\\"flex justify-end mt-1 h-full\\">
      <zbutton-stub color=\\"cherry\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"small\\" to=\\"\\" icon=\\"minus-circle\\" data-testid=\\"unset-issue-priority\\" data-original-title=\\"null\\" class=\\" has-tooltip\\"></zbutton-stub>
    </div>
  </div>
</div>
</div>"
`;
